- Change: Merged documentation for "PLCore", "PLDatabase", "PLMath", "PLGraphics", "PLRenderer", "PLMesh", "PLScene", "PLPhysics", "PLSound", "PLInput", "PLGui", "PLEngine" into "PixelLightBase"
- Change: The sample applications are now using "PLInput" instead of "PLGui" to get and process input events
- Removed: Outdated "PLDefaultFileFormats" (use "PLAssimp" instead)


Changes in PixelLight 0.9.7-R1 (released on June 23, 2011)
- Feature: Added a generic, script language independent, script interface within the PLCore component with support for
           - Global variables
           - Global functions (C++ calls script and script calls C++)
           - RTTI objects (properties, attributes, methods, signals, slots)
           - Namespaces
- Feature: Added the script backend PLScriptLua which adds support for Lua
- Feature: Added the experimental (in Git repository) script backend PLScriptV8 which adds support for JavaScript by using V8 (ECMA-262 compliant JavaScript engine)
- Feature: Added the experimental (in Git repository) script backend PLScriptPython which adds support for Python
- Feature: Added the experimental (in Git repository) script backend PLScriptAngelScript which adds support for AngelScript
- Feature: Added plugin PLScriptBindings which exposes certain parts of PixelLight to script languages
- Feature: The tool PLViewer can now also run scripted stand-alone applications instead of just showing scenes
- Feature: Added demo Lua script "PLDemoSimpleScene.lua" which is a Lua port of the C++ PixelLight SDK demo "PLDemoSimpleScene", use e.g. PLViewer to run the script
- Feature: Added "PLEngine::ScriptApplication" to the application framework, this class can load in and execute a given script out of the box
- Feature: Added the C++ demo "PLDemoScriptApplication" showing how to use "PLEngine::ScriptApplication" in order to load in and execute a scripted stand-alone application
- Feature: Added support for non-power-of-two textures (NPOT)